# fws-lambda

./: .gitignore  Cargo.toml  README.md
commp/: Cargo.toml
commp/src/: fr32_reader.rs  hasher.rs  lib.rs  zero_reader.rs
contracts/: foundry.toml  remappings.txt
contracts/broadcast/Deploy.s.sol/314159/: run-1774400242651.json  run-1774400291229.json  run-latest.json
contracts/script/: Deploy.s.sol
contracts/src/: IJobRegistry.sol  JobRegistry.sol
contracts/test/: JobRegistry.t.sol
core/: Cargo.toml
core/src/: lib.rs
examples/sha256_job/: Cargo.toml
examples/sha256_job/src/: lib.rs
host/: Cargo.toml
host/src/: main.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
tools/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
tools/client/: package.json
tools/client/src/: index.ts
tools/shared/: package.json
tools/shared/src/: chain.ts  cid.ts  config.ts  index.ts  synapse.ts
tools/worker/: package.json
tools/worker/src/: index.ts
