[workspace]
resolver = "2"
members = ["core", "commp", "methods", "host"]
exclude = ["examples/sha256_job"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
fws-lambda-core = { path = "core" }
fws-lambda-methods = { path = "methods" }
fws-commp = { path = "commp" }
risc0-zkvm = "=3.0.5"
risc0-build = "=3.0.5"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
sha2 = "0.10"
alloy = "0.12"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
