[package]
name = "fws-lambda-core"
edition.workspace = true
version.workspace = true

[features]
default = ["std"]
std = ["serde/std", "alloy-sol-types/std"]

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }
alloy-sol-types = { version = "0.8", default-features = false }
